--- a/style.css
+++ b/style.css
@@ -77,10 +77,11 @@ body{
 .link{
     margin-bottom: 15px;
 }
- a {text-decoration: none;
+p a {text-decoration: none;
+    
 }
 
-a:hover{ text-decoration: underline;}
+p a:hover{ text-decoration: underline;}
 
 select{
     height: 40px;
@@ -96,3 +97,5 @@ select{
 header{
     text-align: center;
 }
+
+p{ text-align: center;}
