--- a/admin.css
+++ b/admin.css
@@ -1,57 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Poppin', sans-serif ;
-    background-color: #1a3340;
-}
-.navbar{
-    background-color: 5498ba;
-    padding: 17px 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.navbar .logo{
-    font-size: 30px;
-    color: #fff;
-}
-.navbar ul{
-    list-style: none;
-    display: flex;
-    gap: 30px;
-}
-.navbar ul li a{
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-}
-.navbar ul li a:hover{color: #1a3340;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Poppins', sans-serif;
 }
 
-.hero h1{
-    font-size: 53px;
+body {
+  background-color: #fff;
+}
 
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  padding: 10px 0;
+  border-bottom: 2px solid #9104ad;
 }
-.hero p{
-    font-size: 18px;
-    margin: 20px 0px;
+
+.hero {
+  min-height: 100vh;
+  background: url(./images/admin.jpg) no-repeat right center; /* better positioning */
+  background-size: contain; /* width = 45%, height adjusts automatically */
 }
-.hero .btn{
-    display: flex;
-    padding: 12px 20px;
-    background-color: #5498ba;
-    color: #fff;
-    font-size: 18px;
-    letter-spacing: 1px;
-    text-decoration: none;
+
+
+nav ul {
+  display: flex;
+  align-items: center;
+}
+
+nav ul li {
+  margin: 0 20px;
+}
+
+nav ul li a {
+  font-size: 15px;
+  font-weight: 800;
+  color: #9104ad;
+  text-transform: uppercase;
+}
+
+nav ul li a:hover{
+    border-bottom: 2px solid #9104ad;
+}
+nav button {
+   height:45px;
+    background: #9104ad;
+    border: 0;
     border-radius: 5px;
-    transition: 0.3s ease;
+    color: #fff;
+    font-size:15px;
+    cursor:pointer;
+    transition: all 0.3s;
+    margin-top: 10px;
+    padding: 0px 10px;
 }
-.hero .btn:hover{
-    background-color: #fff;
-    color:#1a3340
+
+nav button:hover{
+     filter: brightness(85%);
 }
+
+.content{
+    position: absolute;
+    top: 35%;
+    left: 90px;
+}
+
+h2{
+    font-size: 50px;
+    color: #9104ad;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+p{
+    color: #9104ad;
+    font-size: 11px;
+    margin-top: 10px;
+}
+
+
