--- a/login.css
+++ b/login.css
@@ -60,7 +60,7 @@ body{
 }
 .btn{
     height:35px;
-    background: rgba(76,68,182,0.808);
+    background: #9104ad ;
     border: 0;
     border-radius: 5px;
     color: #fff;
