--- a/admin.css
+++ b/admin.css
@@ -81,7 +81,7 @@ nav button:hover {
 
 .home-content h2 {
   font-size: 2.5rem; 
-  color: black;
+  color: #9104ad;
   text-transform: uppercase;
   font-weight: 800;
   max-width: 39.375rem; 
@@ -91,7 +91,7 @@ nav button:hover {
 }
 
 p {
-  color: black;
+  color: #9104ad;
   font-size: 0.6875rem; 
   margin-top: 0.625rem; 
   opacity: 0;
@@ -148,7 +148,7 @@ body {
 }
 
 .hero {
-  height: 100vh; /* full viewport height for a stable layout */
+  height: 100vh;
   background: url(./images/adminpg.jpg) no-repeat center center fixed;
   background-size: cover;
   width: 100%;
@@ -194,7 +194,7 @@ nav button:hover {
 
 .home {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -205,7 +205,7 @@ nav button:hover {
 
 .home-content h2 {
   font-size: 2.5rem; 
-  color: black;
+  color: purple;
   text-transform: uppercase;
   font-weight: 800;
   max-width: 39.375rem; 
@@ -215,7 +215,7 @@ nav button:hover {
 }
 
 p {
-  color: black;
+  color: purple;
   font-size: 0.6875rem; 
   margin-top: 0.625rem; 
   opacity: 0;
