--- a/admin.css
+++ b/admin.css
@@ -24,6 +24,13 @@ body {
   animation-delay: calc(.2s * var(--i));
 }
 
+.nav .toggle_btn{
+  color: #9104ad;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+
 .hero {
   height: auto;
   background: url(./images/adminpg.jpg) no-repeat center; 
@@ -70,7 +77,7 @@ nav button:hover {
 
 .home {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -120,3 +127,111 @@ p {
     opacity: 1;
   }
 }
+
+@media (max-width:1093px) {
+  .nav {
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    padding: 0.5rem 1rem;
+  }
+
+  nav ul {
+    display: flex;
+    flex-wrap: wrap; 
+  }
+
+  nav ul li {
+    margin: 0 0.8rem;
+  }
+
+  nav ul li a {
+    font-size: 0.875rem; 
+  }
+
+  nav button {
+    height: 2.5rem;
+    font-size: 0.875rem;
+    padding: 0 0.5rem;
+    margin-top: 0.4rem;
+  }
+
+  .dropdown_menu{
+    display: none;
+    position: absolute;
+    left: 1rem;
+    top: 5rem;
+    height: 0;
+    width: 280px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .dropdown_menu.open{
+    height: 188px;
+  }
+
+  .dropdown_menu li a{
+   padding: 0.7rem;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-weight: 800;
+   color: #9104ad;
+  }
+
+  .dropdown_menu li:hover{
+    border: 0.125rem solid #9104ad;
+  }
+
+  .home {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+    padding: 1rem;
+    height: auto; 
+    min-height: 100vh; 
+  }
+
+  .home-content h2 {
+    font-size: 2rem; 
+    max-width: 100%; 
+  }
+
+  .home-content p {
+    font-size: 0.875rem; 
+    margin-top: 0.625rem;
+    max-width: 90%; 
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width:995px){
+  nav ul li a {
+    display: none;
+  }
+.nav .toggle_btn{
+  display: block;
+  position: absolute;
+}
+
+  .dropdown_menu {
+    display: block;
+  }
+}
+
+@media (max-width:365px){
+  .dropdown_menu{
+    right: 2rem;
+    width: unset;
+  }
+  .nav button {
+    margin-left: 3rem; 
+  }
+}
+ 
