--- a/admin.css
+++ b/admin.css
@@ -128,6 +128,8 @@ p {
   }
 }
 
+.dropdown_menu{display: none;}
+
 @media (max-width:1093px) {
   .nav {
     flex-wrap: wrap; 
@@ -180,6 +182,7 @@ p {
    justify-content: center;
    font-weight: 800;
    color: #9104ad;
+   
   }
 
   .dropdown_menu li:hover{
@@ -210,6 +213,8 @@ p {
     justify-content: center;
   }
 }
+
+
 
 @media (max-width:995px){
   nav ul li a {
