--- a/student.css
+++ b/student.css
@@ -31,6 +31,13 @@ body {
   display: none;
 }
 
+.hero {
+  height: auto;
+  background: url(./images/adminpg.jpg) no-repeat center; 
+  background-size: cover; 
+  max-width: 100%;
+}
+
 nav ul {
   display: flex;
   align-items: center;
@@ -73,7 +80,8 @@ nav button:hover {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
+  min-height: 80vh;
   padding: 0;
   animation: slideBottom 1s ease forwards;
   animation-delay: 1s;
@@ -123,7 +131,7 @@ p {
 
 .dropdown_menu{display: none;}
 
-@media (max-width:1093px) {
+@media (max-width:1200px) {
   .nav {
     flex-wrap: wrap; 
     justify-content: space-between; 
@@ -190,7 +198,7 @@ p {
     text-align: center; 
     padding: 1rem;
     height: auto; 
-    min-height: 100vh; 
+    min-height: 80vh; 
   }
 
   .home-content h2 {
@@ -209,7 +217,7 @@ p {
 
 
 
-@media (max-width:995px){
+@media (max-width:1074px){
   nav ul li a {
     display: none;
   }
@@ -232,4 +240,5 @@ p {
     margin-left: 3rem; 
   }
 }
+ 
  
