--- a/admin.css
+++ b/admin.css
@@ -10,7 +10,8 @@
 }
 
 body {
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   background: linear-gradient(to bottom left,white 50%,purple) no-repeat; 
 }
 
@@ -78,8 +79,10 @@ nav button:hover {
 
 .home {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;      
+  justify-content: center;     
+  align-items: center;         
+  text-align: center;          
   width: 100%;
   height: auto;
   min-height: 80vh;
@@ -88,24 +91,39 @@ nav button:hover {
   animation-delay: 1s;
 }
 
+.home-content {
+  text-align: center;          
+}
+
 .home-content h2 {
-  font-size: 2.5rem; 
+  font-size: 2.5rem;
   color: #9104ad;
   text-transform: uppercase;
   font-weight: 800;
-  max-width: 39.375rem; 
+  max-width: 39.375rem;
+  text-align: center;          
+  margin-bottom: 0.625rem;     
   animation: slideBottom 1s ease forwards;
   animation-delay: 1s;
   opacity: 0;
 }
 
-p {
+.home-content p {
   color: #9104ad;
-  font-size: 0.6875rem; 
-  margin-top: 0.625rem; 
-  opacity: 0;
+  font-size: 0.9375rem;       
+  margin-top: 0.625rem;
+  text-align: center;          
+  max-width: 400px;           
   animation: slideBottom 1s ease forwards;
   animation-delay: 1s;
+  opacity: 0;
+}
+
+.home-content h2,
+.home-content p {
+  max-width: 600px;     
+  margin-left: auto;     
+  margin-right: auto;   
 }
 
 @keyframes slideTop {
