Enhance admin and details pages with improved CSS styling and structure

--- a/src/weekly/admin.css
+++ b/src/weekly/admin.css
@@ -1,9 +1,24 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Poppins', sans-serif;
+}
 header, main {
   width: 90%;
   margin: 0 auto;
   padding: 15px;
+ 
 }
+body {
+  height: auto;
+  min-height: 100vh;
+  background: linear-gradient(to bottom left,white 80%,purple) no-repeat;
+  }
+
 
 
 header h1 {
@@ -108,3 +123,50 @@ main h2 {
   margin-right: 6px;
   padding: 6px 10px;
 }
+#discussion-forum h2 {
+  color: rgb(145, 4, 173);
+}
+#comment-form fieldset {
+  border: 1px solid rgb(232, 215, 241);
+  background: rgb(255, 255, 255);
+  border-radius: 6px;
+  padding: 10px;
+}
+#comments-container article {
+  background: rgb(252, 247, 255);
+  border: 1px solid rgb(234, 214, 246);
+  border-radius: 6px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+#new-comment,#discription-section,#Exercise-section {
+  background: rgb(252, 247, 255);
+  width: 100%;
+  margin-top: 5px;
+  padding: 8px;
+  border: 1px solid rgb(216, 192, 234);
+  border-radius: 5px;
+ 
+}
+p{
+  text-align: justify;
+}
+
+button {
+  height: 2.8125rem; 
+  background: #9104ad;
+  border: 0;
+  border-radius: 0.3125rem; 
+  color: #fff;
+  font-size: 0.9375rem; 
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-top: 0.625rem; 
+  padding: 0 0.625rem; 
+}
+
+button:hover {
+  filter: brightness(85%);
+}
+
