--- a/src/admin/manage_user.css
+++ b/src/admin/manage_user.css
@@ -118,6 +118,7 @@ label{
 .edit-btn, .delete-btn {
   border: none;
   color: white;
+  width: 100px;
   font-weight: 500;
   border-radius: 8px;
   padding: 6px 12px;
