--- a/src/admin/manage_user.css
+++ b/src/admin/manage_user.css
@@ -83,6 +83,7 @@ section{
 
 .btn:hover{
     filter: brightness(85%);
+    background: #9104ad;
 }
 
 details summary {
@@ -241,4 +242,36 @@ label{
     }
 }
 
+
+.edit-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.45);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+
+.edit-modal {
+  width: 400px;
+  max-width: 95%;
+  background: #fff;
+  padding: 25px;
+  border-radius: 20px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.25);
+}
+
+
+.btn-secondary {
+  background: #6c757d !important;
+  border: none;
+}
+.btn-secondary:hover {
+  filter: brightness(85%);
+}
 
